--- a/data/build.gradle
+++ b/data/build.gradle
@@ -9,5 +9,12 @@ java {
 }
 
 dependencies {
+    implementation(project(":core"))
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 }
